--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+    margin: 0 auto;
+    padding: 0;
     font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
     color: #777; 
     background-color: #777;
@@ -6,41 +8,98 @@ body {
     font-size: 18px;
 }
 
-/* .container::after {
+.a1, .a2, .a3 {
+    padding-top: 30px;
+}
+
+.a4, .a5 {
+    padding-top: 15px;
+}
+ /* .container::after {
     content: "";
     display: table;
     clear: both;
-} */
+}  */
 
 .header {
     background-color: #ebebeb;
-    width: 495px;
+    height: 80px;
     text-align: center;
-    position: relative;
-    left: 20px; 
-    right: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+   
 }
 
  .nav {
     background-color: #ebebeb;
-    width: 495px;
+    height: 80px;
     text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+
 }
 
- .section {
+  .section {
     background-color: #ebebeb;
     width: 495px;
+    height: 250px; 
     text-align: center;
+    float: left;
+    position: relative;
+    left: 100px; 
+    margin-top: 20px;
+    overflow: hidden;
+    
 }
+
+.article {
+    color: #ebebeb; 
+    background-color: #777;
+    height: 180px;
+    margin-left: 10px;
+    margin-right: 10px;
+    overflow: hidden;
+}
+
+ .headers {
+    color: #777;
+    background-color: #ebebeb;
+    height: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+}
+
+.p {
+    color: #777;
+    background-color: #ebebeb;;
+    height: 50px;
+    margin-left: 10px; 
+    margin-right: 10px;
+    position: relative;
+    bottom: 10px;
+} 
 
 .aside {
     background-color: #ebebeb;
-    width: 495px;
+    width: 245px;
+    height: 250px;
     text-align: center;
-}
+    float: left;
+    position: relative;
+    left: 120px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+} 
 
 .footer {
     background-color: #ebebeb;
-    width: 495px;
+    height: 80px;
     text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;    
+    clear: both;
+    
 } 
+
+
